--- a/config.yaml
+++ b/config.yaml
@@ -4,8 +4,8 @@ theme: "starter-hugo-academic"
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Academic # Website name
-baseurl: '' # Website URL
+title: Pinaki Bhattacharyya # Website name
+baseurl: 'https://pinaki-dev.netlify.app/' # Website URL
 copyright: '' # Footer text, e.g. '© {year} Me'
 
 ############################
@@ -56,7 +56,7 @@ markup:
     codeFences: false
   tableOfContents:
     startLevel: 2
-    endLevel: 3
+    endLevel: 4
 imaging:
   resampleFilter: lanczos
   quality: 75
