--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -7,8 +7,8 @@
 
 theme: ocean
 day_night: true
-font: ''
-font_size: M
+font: 'custom'
+font_size: L
 
 # SEO
 
@@ -73,7 +73,7 @@ time_format: '3:04 PM'
 address_format: en-us
 
 # Site features
-
+highlight_superuser: true
 highlight: true
 highlight_languages:
   - r
@@ -153,7 +153,7 @@ marketing:
   baidu_site_verification: ''
   baidu_tongji: ''
 cms:
-  branch: master
+  branch: main
   local_backend: false
 icon:
   pack:
