--- a/data/fonts/custom.toml
+++ b/data/fonts/custom.toml
@@ -1,10 +1,11 @@
-name = "Custom"
+# Font style metadata
+name = "Minimal"
 
 # Optional Google font URL
-google_fonts = "family=Roboto+Mono&family=Source+Sans+Pro:wght@200;300;400;700"
+google_fonts = "family=Lato:wght@300&family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700&family=Source+Serif+Pro:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700"
 
 # Font families
-heading_font = "Source Sans Pro"
-body_font = "Source Sans Pro"
-nav_font = "Source Sans Pro"
-mono_font = "Roboto Mono"
+heading_font = "Lato"
+body_font = "Source Serif Pro"
+nav_font = "Lato"
+mono_font = "Roboto"
