--- a/themes/github.com/wowchemy/wowchemy-hugo-modules/wowchemy/data/fonts/minimal.toml
+++ b/themes/github.com/wowchemy/wowchemy-hugo-modules/wowchemy/data/fonts/minimal.toml
@@ -2,10 +2,10 @@
 name = "Minimal"
 
 # Optional Google font URL
-google_fonts = "family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700&family=Source+Serif+Pro:ital,wght@0,400;0,700;1,400;1,700"
+google_fonts = "family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700"
 
 # Font families
 heading_font = "Montserrat"
-body_font = "Source+Serif+Pro"
-nav_font = "Source+Serif+Pro"
-mono_font = "Source+Serif+Pro"
+body_font = "Roboto"
+nav_font = "Roboto"
+mono_font = "Roboto Mono"
